--- a/style.css
+++ b/style.css
@@ -16,8 +16,9 @@ body {
   justify-content: center;
   align-items: center;
   width: fit-content;
-  padding: 10px;
+  padding: 20px 10px;
   border-radius: 10px;
+  gap: 1rem;
 }
 
 main {
@@ -36,7 +37,7 @@ main {
   padding: 10px;
   width: 90%;
   height: 30px;
-  margin: 20px 10px;
+  /* margin: 0 10px 20px 10px; */
   text-align: right;
 }
 .btncontainer {
@@ -63,6 +64,9 @@ main {
   .calculatorContainer {
     width: 100%;
     height: 100vh;
+    justify-content: start;
+    padding-top: 5rem;
+    gap: 3rem;
   }
   .btncontainer {
     grid-template-columns: repeat(4, 4fr);
